tests/ui/consts/const-eval/unused-broken-const.stderr
error[E0080]: index out of bounds: the length is 0 but the index is 0
  --> $DIR/unused-broken-const.rs:5:18
   |
LL | const FOO: i32 = [][0];
   |                  ^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
